Fix meteor item image rendering on firefox

--- a/frontend/src/styles/meteor.css
+++ b/frontend/src/styles/meteor.css
@@ -28,6 +28,7 @@
 .meteor-item-card {
     display: flex;
     flex-direction: row;
+    align-items: flex-start;
     padding: 1rem;
     height: 6rem;
 }
@@ -44,6 +45,7 @@
 
 .meteor-item-card__image {
     padding: 0.5rem;
+    height: 84%;
 }
 
 .meteor-card__content, .meteor-item-card__content {
